# tapedeck

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  replay_itch.cpp  research_run.cpp  zalloc_check.cpp
docs/: BENCHMARKS.md  DATA.md  DESIGN.md  FILLS.md  LATENCY.md  RESEARCH_LOG.md
fuzz/: CMakeLists.txt  fuzz_itch.cpp
include/eib/: affinity.hpp  backtester.hpp  clock.hpp  event.hpp  hash.hpp  itch_parser.hpp  match_engine.hpp  order_book.hpp  reference_book.hpp  signal.hpp  types.hpp  version.hpp
research/: README.md  honest_eval.py  killcurve.py  test_honest_eval.py
scripts/: bench.ps1  bench.sh  build.ps1  build.sh  clean.ps1  clean.sh  fuzz.sh  replay.ps1  replay.sh  research.ps1  research.sh  selfcheck.ps1  selfcheck.sh  setup.ps1  setup.sh  test.ps1  test.sh
src/: itch_parser.cpp  match_engine.cpp  order_book.cpp
tests/: CMakeLists.txt  test_backtester.cpp  test_book_differential.cpp  test_itch_parser.cpp  test_match_engine.cpp  test_order_book.cpp  test_signal.cpp  test_smoke.cpp
